feat: add husky and lint-staged

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     }
   },
   "lint-staged": {
-    "src/**/*": ["yarn lint --fix"]
+    "src/**/*": [
+      "yarn lint --fix"
+    ]
   },
   "dependencies": {
     "next": "^12.1.4",
