--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:static": "next build && next out",
     "lint": "eslint src --max-warnings=0",
     "postinstall": "husky install",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -27,6 +28,8 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
@@ -37,6 +40,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
     "pinst": "^3.0.0",
     "prettier": "2.6.2",
